RESOLVED FIXED40025
All Flash content crashes after installing CS5 Design Premium
https://bugs.webkit.org/show_bug.cgi?id=40025
Summary All Flash content crashes after installing CS5 Design Premium
Kevin Decker
Reported 2010-06-01 14:09:40 PDT
Steps I can reproduce 100%: 1. Launch a WebKit Nightly build from today. 2. Navigate to http://www.google.com/finance?q=NASDAQ%3AAAPL 3. Enter BP in the Get quotes field You are taken to the quote page for BP and within a few seconds the flash plugin crashes. Crash log is below. Thread 0 Crashed: Dispatch queue: com.apple.main-thread 0 com.apple.QD 0x9413de32 CopyRgn + 48 1 com.apple.QD 0x9413f6e2 GetClip + 41 2 ...dia.FlashPlayer-10.6.plugin 0x054a3a1b main + 21979 3 ...dia.FlashPlayer-10.6.plugin 0x054a7b70 main + 38704 4 ...dia.FlashPlayer-10.6.plugin 0x054a3ad5 main + 22165 5 ...dia.FlashPlayer-10.6.plugin 0x054a7f02 main + 39618 6 ...dia.FlashPlayer-10.6.plugin 0x054ac037 main + 56311 7 ...dia.FlashPlayer-10.6.plugin 0x0542240a FlashPlayer_10_1_52_15_FlashPlayer + 14154 8 com.apple.WebKit.PluginHost 0x119b4382 0x119a7000 + 54146 9 com.apple.WebKit.PluginHost 0x119aa4fd 0x119a7000 + 13565 10 com.apple.CoreFoundation 0x96c68881 __CFRunLoopDoBlocks + 353 11 com.apple.CoreFoundation 0x96c18b3d __CFRunLoopRun + 845 12 com.apple.CoreFoundation 0x96c180f4 CFRunLoopRunSpecific + 452 13 com.apple.CoreFoundation 0x96c17f21 CFRunLoopRunInMode + 97 14 com.apple.HIToolbox 0x9584915c RunCurrentEventLoopInMode + 392 15 com.apple.HIToolbox 0x95848f11 ReceiveNextEventCommon + 354 16 com.apple.HIToolbox 0x95848d96 BlockUntilNextEventMatchingListInMode + 81 17 com.apple.AppKit 0x989300fd _DPSNextEvent + 847 18 com.apple.AppKit 0x9892f93e -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] + 156 19 com.apple.AppKit 0x988f1bc7 -[NSApplication run] + 821 20 com.apple.WebKit.PluginHost 0x119a840f 0x119a7000 + 5135 21 com.apple.WebKit.PluginHost 0x119a804d 0x119a7000 + 4173 Thread 1: Dispatch queue: com.apple.libdispatch-manager 0 libSystem.B.dylib 0x992dfb42 kevent + 10 1 libSystem.B.dylib 0x992e025c _dispatch_mgr_invoke + 215 2 libSystem.B.dylib 0x992df719 _dispatch_queue_invoke + 163 3 libSystem.B.dylib 0x992df4be _dispatch_worker_thread2 + 240 4 libSystem.B.dylib 0x992def41 _pthread_wqthread + 390 5 libSystem.B.dylib 0x992ded86 start_wqthread + 30 Thread 2: 0 libSystem.B.dylib 0x992debd2 __workq_kernreturn + 10 1 libSystem.B.dylib 0x992df168 _pthread_wqthread + 941 2 libSystem.B.dylib 0x992ded86 start_wqthread + 30 Thread 3: 0 libSystem.B.dylib 0x992debd2 __workq_kernreturn + 10 1 libSystem.B.dylib 0x992df168 _pthread_wqthread + 941 2 libSystem.B.dylib 0x992ded86 start_wqthread + 30 Thread 4: 0 libSystem.B.dylib 0x992debd2 __workq_kernreturn + 10 1 libSystem.B.dylib 0x992df168 _pthread_wqthread + 941 2 libSystem.B.dylib 0x992ded86 start_wqthread + 30 Thread 5: 0 libSystem.B.dylib 0x992debd2 __workq_kernreturn + 10 1 libSystem.B.dylib 0x992df168 _pthread_wqthread + 941 2 libSystem.B.dylib 0x992ded86 start_wqthread + 30 Thread 6: 0 libSystem.B.dylib 0x992e7262 __semwait_signal + 10 1 libSystem.B.dylib 0x992e6f1e _pthread_cond_wait + 1191 2 libSystem.B.dylib 0x992e8bb8 pthread_cond_wait$UNIX2003 + 73 3 ...dia.FlashPlayer-10.6.plugin 0x0542ff9f unregister_ShockwaveFlash + 44383 4 ...dia.FlashPlayer-10.6.plugin 0x050152a4 0x4ffc000 + 103076 5 ...dia.FlashPlayer-10.6.plugin 0x0543009e unregister_ShockwaveFlash + 44638 6 ...dia.FlashPlayer-10.6.plugin 0x054301a8 unregister_ShockwaveFlash + 44904 7 libSystem.B.dylib 0x992e6a19 _pthread_start + 345 8 libSystem.B.dylib 0x992e689e thread_start + 34 Thread 7: 0 libSystem.B.dylib 0x992e7262 __semwait_signal + 10 1 libSystem.B.dylib 0x992e6f1e _pthread_cond_wait + 1191 2 libSystem.B.dylib 0x992e8bb8 pthread_cond_wait$UNIX2003 + 73 3 ...dia.FlashPlayer-10.6.plugin 0x0542ff9f unregister_ShockwaveFlash + 44383 4 ...dia.FlashPlayer-10.6.plugin 0x050152a4 0x4ffc000 + 103076 5 ...dia.FlashPlayer-10.6.plugin 0x0543009e unregister_ShockwaveFlash + 44638 6 ...dia.FlashPlayer-10.6.plugin 0x054301a8 unregister_ShockwaveFlash + 44904 7 libSystem.B.dylib 0x992e6a19 _pthread_start + 345 8 libSystem.B.dylib 0x992e689e thread_start + 34 Thread 8: 0 libSystem.B.dylib 0x992e7262 __semwait_signal + 10 1 libSystem.B.dylib 0x992e6f1e _pthread_cond_wait + 1191 2 libSystem.B.dylib 0x992e8bb8 pthread_cond_wait$UNIX2003 + 73 3 ...dia.FlashPlayer-10.6.plugin 0x0542ff9f unregister_ShockwaveFlash + 44383 4 ...dia.FlashPlayer-10.6.plugin 0x050152a4 0x4ffc000 + 103076 5 ...dia.FlashPlayer-10.6.plugin 0x0543009e unregister_ShockwaveFlash + 44638 6 ...dia.FlashPlayer-10.6.plugin 0x054301a8 unregister_ShockwaveFlash + 44904 7 libSystem.B.dylib 0x992e6a19 _pthread_start + 345 8 libSystem.B.dylib 0x992e689e thread_start + 34 Thread 9: 0 libSystem.B.dylib 0x992e7262 __semwait_signal + 10 1 libSystem.B.dylib 0x992e6f1e _pthread_cond_wait + 1191 2 libSystem.B.dylib 0x992e8bb8 pthread_cond_wait$UNIX2003 + 73 3 ...dia.FlashPlayer-10.6.plugin 0x0542ff9f unregister_ShockwaveFlash + 44383 4 ...dia.FlashPlayer-10.6.plugin 0x050152a4 0x4ffc000 + 103076 5 ...dia.FlashPlayer-10.6.plugin 0x0543009e unregister_ShockwaveFlash + 44638 6 ...dia.FlashPlayer-10.6.plugin 0x054301a8 unregister_ShockwaveFlash + 44904 7 libSystem.B.dylib 0x992e6a19 _pthread_start + 345 8 libSystem.B.dylib 0x992e689e thread_start + 34 Thread 10: 0 libSystem.B.dylib 0x992b935a semaphore_timedwait_signal_trap + 10 1 libSystem.B.dylib 0x992e6ea1 _pthread_cond_wait + 1066 2 libSystem.B.dylib 0x99315a28 pthread_cond_timedwait_relative_np + 47 3 ...dia.FlashPlayer-10.6.plugin 0x0542ff61 unregister_ShockwaveFlash + 44321 4 ...dia.FlashPlayer-10.6.plugin 0x053285f8 0x4ffc000 + 3327480 5 ...dia.FlashPlayer-10.6.plugin 0x0543009e unregister_ShockwaveFlash + 44638 6 ...dia.FlashPlayer-10.6.plugin 0x054301a8 unregister_ShockwaveFlash + 44904 7 libSystem.B.dylib 0x992e6a19 _pthread_start + 345 8 libSystem.B.dylib 0x992e689e thread_start + 34 Thread 11: 0 libSystem.B.dylib 0x992b935a semaphore_timedwait_signal_trap + 10 1 libSystem.B.dylib 0x992e6ea1 _pthread_cond_wait + 1066 2 libSystem.B.dylib 0x99315a28 pthread_cond_timedwait_relative_np + 47 3 ...dia.FlashPlayer-10.6.plugin 0x0542ff61 unregister_ShockwaveFlash + 44321 4 ...dia.FlashPlayer-10.6.plugin 0x051d886f 0x4ffc000 + 1951855 5 ...dia.FlashPlayer-10.6.plugin 0x0543009e unregister_ShockwaveFlash + 44638 6 ...dia.FlashPlayer-10.6.plugin 0x054301a8 unregister_ShockwaveFlash + 44904 7 libSystem.B.dylib 0x992e6a19 _pthread_start + 345 8 libSystem.B.dylib 0x992e689e thread_start + 34 Thread 12: 0 libSystem.B.dylib 0x992b935a semaphore_timedwait_signal_trap + 10 1 libSystem.B.dylib 0x992e6ea1 _pthread_cond_wait + 1066 2 libSystem.B.dylib 0x99315a28 pthread_cond_timedwait_relative_np + 47 3 ...dia.FlashPlayer-10.6.plugin 0x0542ff61 unregister_ShockwaveFlash + 44321 4 ...dia.FlashPlayer-10.6.plugin 0x053285f8 0x4ffc000 + 3327480 5 ...dia.FlashPlayer-10.6.plugin 0x0543009e unregister_ShockwaveFlash + 44638 6 ...dia.FlashPlayer-10.6.plugin 0x054301a8 unregister_ShockwaveFlash + 44904 7 libSystem.B.dylib 0x992e6a19 _pthread_start + 345 8 libSystem.B.dylib 0x992e689e thread_start + 34 Thread 0 crashed with X86 Thread State (32-bit):
Attachments
do not support snapshotting older versions of Flash 10.1 (1.84 KB, patch)
2010-06-01 14:11 PDT, Kevin Decker
kdecker: review+
Kevin Decker
Comment 1 2010-06-01 14:11:00 PDT
Created attachment 57595 [details] do not support snapshotting older versions of Flash 10.1
Kevin Decker
Comment 2 2010-06-01 14:17:39 PDT
Reviewed by Simon Fraser.
Note You need to log in before you can comment on or make changes to this bug.