        Reviewed by Simon Fraser.

https://bugs.webkit.org/show_bug.cgi?id=40025
        <rdar://problem/8046273> All Flash content crashes after installing CS5 Design Premium.

        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView supportsSnapshotting]): Do not support snapshotting Flash 10.1 if
        the version is less than 10.1.53.60.



Canonical link: https://commits.webkit.org/51541@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60504 268f45cc-cd09-0410-ab3c-d52691b4dbfc